--- a/localization_template_empty.properties
+++ b/localization_template_empty.properties
@@ -3,9 +3,9 @@
 
 #also note that in some cases, mostly with buttons the text wont wrap or shrink if the string is longer than the available space
 
-#leave your nickname here if you want or leave it empty. this will show up in settings menu
+#leave your nickname here if you want or leave the /// if you dont. this will show up in the settings menu
 btb.translated.by.label=
-btb.translated.by=
+btb.translated.by=///
 
 #btb main
 btb.main.allexcluded=
@@ -274,4 +274,5 @@ btb.options.misc.load_am_sus_tip=
 btb.options.misc.toggle_ui=
 btb.options.misc.toggle_ui_tip=
 btb.options.misc.reload_packs=
+
 btb.options.misc.open_guide=
