--- a/localization_template_empty.properties
+++ b/localization_template_empty.properties
@@ -3,9 +3,9 @@
 
 #also note that in some cases, mostly with buttons the text wont wrap or shrink if the string is longer than the available space
 
-#leave your nickname here if you want or leave the /// if you dont. this will show up in the settings menu
+#leave your nickname here if you want or leave it empty. this will show up in settings menu
 btb.translated.by.label=
-btb.translated.by=///
+btb.translated.by=
 
 #btb main
 btb.main.allexcluded=
@@ -139,6 +139,11 @@ btb.ps.ts.rmb.offset_save=
 btb.ps.ts.rmb.offset_cancel=
 btb.ps.ts.rmb.offset_tip=
 
+btb.ps.ts.rmb.assign_remove=
+btb.ps.ts.rmb.assign_edited=
+btb.ps.ts.rmb.assign_removed=
+btb.ps.ts.rmb.assign_this_track=
+
 btb.ps.ts.rmb.assign_edit=
 btb.ps.ts.rmb.assign_current=
 btb.ps.ts.rmb.assign_add=
@@ -150,7 +155,7 @@ btb.ps.ts.rmb.assign_priority_lowest=
 btb.ps.ts.rmb.assign_priority=
 btb.ps.ts.rmb.assign_saveremove=
 btb.ps.ts.rmb.assign_save=
-btb.ps.ts.rmb.assign_removed_noti=
+#btb.ps.ts.rmb.assign_removed_noti=
 btb.ps.ts.rmb.assign_no_class=
 btb.ps.ts.rmb.assign_already_assigned=
 btb.ps.ts.rmb.assign_overwrite=
@@ -274,5 +279,4 @@ btb.options.misc.load_am_sus_tip=
 btb.options.misc.toggle_ui=
 btb.options.misc.toggle_ui_tip=
 btb.options.misc.reload_packs=
-
 btb.options.misc.open_guide=
